<resources>
    <string name="ti_ime_name_standard_txt">LG Japanese keyboard</string>
    <string name="ti_preference_touch_feedback_type_title_txt"> Touch feedback </string>
    <string name="ti_preference_touch_feedback_type_summary_txt"> Set key preview, sound feedback, and vibration feedback </string>
    <string name="ti_ime_name_setting_title_standard_txt">LG Keyboard</string>
    <string name="ti_preference_lang_setting_menu_txt">Language</string>
    <string name="ti_preference_language_summary_txt">Select language</string>
    <string name="ti_preference_user_dictionary_menu_txt">@string/ti_preference_dictionary_menu_standard_txt</string>
    <string name="ti_preference_key_setting_menu_txt">COMMON SETTINGS</string>
    <string name="ti_preference_advanced_setting_menu_txt">ADVANCED SETTINGS</string>
    <string name="ti_preference_external_application_menu_txt">EXTERNAL APPLICATION</string>
    <string name="ti_preference_key_sound_title_txt"> Sound feedback </string>
    <string name="ti_preference_key_sound_summary_txt"> Provide sound feedback when keys are pressed </string>
    <string name="ti_preference_key_vibration_title_txt"> Vibration feedback </string>
    <string name="ti_preference_key_vibration_summary_txt"> Give vibration feedback when keys are pressed </string>
    <string name="ti_preference_preview_title_txt"> Key preview </string>
    <string name="ti_preference_preview_summary_txt"> Enable key preview </string>
    <string name="ti_preference_auto_caps_title_txt"> Auto capitalization </string>
    <string name="ti_preference_auto_caps_summary_txt"> Capitalize the first word of each sentence automatically </string>
    <string name="ti_preference_auto_space_title_txt"> Auto space input </string>
    <string name="ti_preference_auto_space_summary_txt"> In English mode, input space automatically after selecting a candidate </string>
    <string name="ti_preference_auto_punctuation_title_txt"> Auto punctuation </string>
    <string name="ti_preference_auto_punctuation_summary_txt"> Insert a period when double tapping space key </string>
    <string name="ti_preference_voice_input_title_txt"> Voice typing key </string>
    <string name="ti_preference_voice_input_summary_txt"> Display voice key on keyboard and use voice input </string>
    <string name="ti_preference_fullscreen_mode_title_txt"> Fullscreen mode </string>
    <string name="ti_preference_fullscreen_mode_summary_txt"> Use full input screen in landscape view </string>
    <string name="ti_preference_split_mode_title_txt">Split keyboard</string>
    <string name="ti_preference_split_mode_summary_txt"> Splitting the keyboard to the sides of the screen on landscape mode </string>
    <string name="ti_preference_one_handed_title_txt">One-handed operation</string>
    <string name="ti_preference_one_handed_summary_txt">Move the LG Japanese keyboard to the left or right.\nTurn Emoji Quick off to use one-handed operation.</string>
    <string name="ti_preference_one_handed_summary_kddi_txt">Move the LG Japanese keyboard to the left or right.</string>
    <string name="ti_preference_help_title_txt">Help</string>
    <string name="ti_preference_key_height_title_txt"> Key Size </string>
    <string name="ti_preference_key_height_summary_txt">Set keyboard size for each orientation</string>
    <string name="ti_preference_key_height_portrait_title_txt">Portrait</string>
    <string name="ti_preference_key_height_landscape_title_txt">Landscape</string>
    <string name="ti_preference_key_height_clear_txt">Reset</string>
    <string name="ti_preference_kana_roman_input_mode_title_txt"> Roman letter/Kana letter </string>
    <string name="ti_preference_kana_roman_input_mode_summary_txt"> Choose input mode between \"Roman letter\" and \"Kana letter\" (Hardware keyboard only) </string>
    <string name="ti_preference_roman_letter_txt"> Roman letter </string>
    <string name="ti_preference_kana_letter_txt"> Kana letter </string>
    <string name="ti_preference_keyboard_type_title_txt">Input language and keyboard type</string>
    <string name="ti_preference_keyboard_type_summary_txt">Select input language and set keyboard type for each orientation</string>
    <string name="ti_preference_input_language_title_txt">Input language</string>
    <string name="ti_preference_input_language_ja_txt">日本語</string>
    <string name="ti_preference_input_language_en_txt">English</string>
    <string name="ti_preference_input_language_ko_txt">한국어</string>
    <string name="ti_preference_keyboard_type_portrait_title_txt">PORTRAIT KEYBOARD TYPE</string>
    <string name="ti_preference_keyboard_type_landscape_title_txt">LANDSCAPE KEYBOARD TYPE</string>
    <string name="ti_preference_keyboard_type_ja_txt">Japanese</string>
    <string name="ti_preference_keyboard_type_en_txt">English</string>
    <string name="ti_preference_keyboard_type_num_txt">Numeric</string>
    <string name="ti_keyboard_type_10key_txt">10key keyboard</string>
    <string name="ti_keyboard_type_qwerty_txt">QWERTY Keyboard</string>
    <string name="ti_preference_keyboard_type_common_12_title_txt">10key keyboard</string>
    <string name="ti_preference_keyboard_type_common_12_summary_txt">Set 10key keyboard as common keyboard type for all input modes</string>
    <string name="ti_preference_keyboard_type_common_12_message_txt">This function sets to display 10key keyboard in all input modes.\nAre you sure?</string>
    <string name="ti_preference_keyboard_type_common_qwerty_title_txt">QWERTY Keyboard</string>
    <string name="ti_preference_keyboard_type_common_qwerty_summary_txt">Set QWERTY keyboard as common keyboard type for all input modes</string>
    <string name="ti_preference_keyboard_type_common_qwerty_message_txt">This function sets to display QWERTY keyboard in all input modes.\nAre you sure?</string>
    <string name="ti_preference_keyboard_type_common_last_title_txt">Last Used Keyboard</string>
    <string name="ti_preference_keyboard_type_common_last_summary_txt">Set last used keyboard as common keyboard type for all input modes</string>
    <string name="ti_preference_keyboard_type_common_last_message_txt">This function sets to display the last used keyboard in all input modes.\nAre you sure?</string>
    <string name="ti_preference_keyboard_type_diff_title_txt">Setting for Each Input Mode</string>
    <string name="ti_preference_keyboard_type_diff_summary_txt">Set keyboard type for each input mode</string>
    <string name="ti_preference_keyboard_type_diff_full_hirakana_title_txt">Hiragana-Kanji</string>
    <string name="ti_preference_keyboard_type_diff_full_katakana_title_txt">Full-width Katakana</string>
    <string name="ti_preference_keyboard_type_diff_half_katakana_title_txt">Half-width Katakana</string>
    <string name="ti_preference_keyboard_type_diff_full_alphabet_title_txt">Full-width Alphabet</string>
    <string name="ti_preference_keyboard_type_diff_half_alphabet_title_txt">Half-width Alphabet</string>
    <string name="ti_preference_keyboard_type_diff_full_number_title_txt">Full-width Numeric</string>
    <string name="ti_preference_keyboard_type_diff_half_number_title_txt">Half-width Numeric</string>
    <string name="ti_input_mode_type_entry_54_txt">10key keyboard</string>
    <string name="ti_input_mode_type_entry_qwerty_txt">QWERTY Keyboard</string>
    <string name="ti_input_mode_type_entry_previous_txt">Last Used Keyboard</string>
    <string name="ti_preference_keyboard_android_default_txt">Default</string>
    <string name="ti_preference_one_touch_emoji_list_menu_txt">Emoji Quick</string>
    <string name="ti_preference_one_touch_emoji_list_summary_txt">Set display position of Emoji Quick</string>
    <string name="ti_preference_one_touch_emoji_list_display_left_txt">Left</string>
    <string name="ti_preference_one_touch_emoji_list_display_right_txt">Right</string>
    <string name="ti_preference_one_touch_emoji_list_display_hidden_txt">Not display</string>
    <string name="ti_preference_one_touch_emoji_list_display_message_txt">Emoji Quick is not displayed in the field which Emoji and Decome Emoji cannot input.</string>
    <string name="ti_preference_one_touch_emoji_list_common_summary_txt">Change setting of Emoji Quick</string>
    <string name="ti_preference_keyboard_skinadd_title_txt"> Keyboard theme </string>
    <string name="ti_preference_keyboard_skinadd_summary_txt"> Set the keyboard theme </string>
    <string name="ti_keyboardskinlauncher_activity_title_txt">Keyboard theme</string>
    <string name="ti_preference_keyboard_add_default_txt">Basic</string>
    <string name="ti_preference_auto_cursor_movement_summary_on_txt">On toggle input, automatically move the cursor to the right %.1f seconds after a character was entered</string>
    <string name="ti_preference_auto_cursor_movement_summary_off_txt">On toggle input, do not move the cursor automatically</string>
    <string name="ti_preference_auto_cursor_movement_menu_txt"> Auto cursor movement </string>
    <string name="ti_preference_auto_cursor_movement_summary_txt"> Set wait time of automatic cursor movement </string>
    <string name="ti_preference_auto_cursor_movement_speed_fast_txt">Fast</string>
    <string name="ti_preference_auto_cursor_movement_speed_normal_txt">Normal</string>
    <string name="ti_preference_auto_cursor_movement_speed_slow_txt">Slow</string>
    <string name="ti_preference_auto_cursor_movement_off">Off</string>
    <string name="ti_preference_webapi_title_txt">Extra conversion engine</string>
    <string name="ti_preference_webapi_summary_txt">Display conversion candidates by external conversion engine</string>
    <string name="ti_preference_conversion_menu_txt">Conversion</string>
    <string name="ti_preference_conversion_menu_ja_txt">Japanese Conversion</string>
    <string name="ti_preference_conversion_menu_en_txt">English Conversion</string>
    <string name="ti_preference_webapi_none_txt">none</string>
    <string name="ti_preference_webapi_dialog_message_txt">This function allows you to perform Japanese conversion using external conversion engine such as a Web dictionary server on the Internet. When you tap the button \"Extra Conv\" in the prediction/conversion candidate area, inputting characters for conversion, including personal data like passwords and credit card numbers, might be sent to the external conversion engine through the Internet. Use this function?</string>
    <string name="ti_preference_webapi_list_max_error_txt">Exceeded the number of extra conversion engines.</string>
    <string name="ti_preference_prediction_title_txt">Word prediction</string>
    <string name="ti_preference_prediction_title_ja_txt">Japanese Word Prediction</string>
    <string name="ti_preference_prediction_title_en_txt">English Word Prediction</string>
    <string name="ti_preference_prediction_summary_txt">Display predicted words for text input easily</string>
    <string name="ti_preference_correct_spell_title_txt">Typing error correction</string>
    <string name="ti_preference_correct_spell_summary_txt">In English QWERTY mode, Display predicted words for correcting typing error</string>
    <string name="ti_preference_candidate_lines_title_txt">Line of candidate area</string>
    <string name="ti_preference_candidate_lines_summary_txt">Set number of lines of candidate area for portrait </string>
    <string name="ti_preference_candidate_lines_portrait_title_txt">Portrait</string>
    <string name="ti_preference_candidate_lines_portrait_summary_txt">Setting number of lines for portrait</string>
    <string name="ti_preference_candidate_lines_landscape_title_txt">Landscape</string>
    <string name="ti_cand_tab_pictgram_txt">Emoji</string>
    <string name="ti_cand_tab_symbol_txt">Symbol</string>
    <string name="ti_cand_tab_emoticon_txt">Emoticon</string>
    <string name="ti_cand_tab_decoemojilist_txt">Deco</string>
    <string name="ti_candidates_are_nothing_txt">Fail to make the list</string>
</resources>