<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2008-2013  OMRON SOFTWARE Co., Ltd.  All Rights Reserved.
-->
<!-- candidate list -->
<FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   >
  <LinearLayout
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >
       <LinearLayout
           android:id="@+id/candidate_blank_area"
           android:orientation="vertical"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:minHeight="@dimen/candidate_blank_area_height"/>
       <FrameLayout
           android:orientation="vertical"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom"
           >
          <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             >

  <LinearLayout
     android:id="@+id/candview_tab"
     android:background="@color/candidate_tab_back"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >
    <HorizontalScrollView
       android:id="@+id/tab_scroll"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:requiresFadingEdge="horizontal"
       android:fadingEdgeLength="@dimen/tab_scroll_fading_edge_length"
       android:scrollbars="none"
       android:fillViewport="true"
       android:background="@color/candidate_tab_back"
       >
      <LinearLayout
         android:id="@+id/tab_base"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="@dimen/cand_tab_height"
         android:background="@color/candidate_tab_back"
         android:paddingTop="@dimen/cand_category_padding_top"
         android:paddingBottom="@dimen/cand_category_padding_bottom"
         android:paddingLeft="@dimen/cand_category_padding_left"
         android:paddingRight="@dimen/cand_category_padding_right"
         >
        <TextView
           android:id="@+id/candview_pictgram"
           android:layout_width="wrap_content"
           android:layout_height="fill_parent"
           android:layout_weight="1"
           android:background="@drawable/cand_tab"
           android:singleLine="true"
           android:gravity="center"
           android:text="@string/ti_cand_tab_pictgram_txt"
           android:textColor="@color/tab_textcolor_no_select"
           android:textSize="@dimen/tab_text_size"
           android:soundEffectsEnabled="false"
           android:layout_marginLeft="@dimen/cand_tab_margin_left"
           android:layout_marginRight="@dimen/cand_tab_margin_right"
           />
        <TextView
           android:id="@+id/candview_pictgram_uni6"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:background="@drawable/cand_tab"
           android:singleLine="true"
           android:gravity="center"
           android:text="@string/ti_cand_tab_pictgram_uni6_txt"
           android:textColor="@color/tab_textcolor_no_select"
           android:textSize="@dimen/tab_text_size"
           android:soundEffectsEnabled="false"
           />
        <TextView
           android:id="@+id/candview_symbol"
           android:layout_width="wrap_content"
           android:layout_height="fill_parent"
           android:layout_weight="1"
           android:background="@drawable/cand_tab"
           android:singleLine="true"
           android:gravity="center"
           android:text="@string/ti_cand_tab_symbol_txt"
           android:textColor="@color/tab_textcolor_no_select"
           android:textSize="@dimen/tab_text_size"
           android:soundEffectsEnabled="false"
           android:layout_marginLeft="@dimen/cand_tab_margin_left"
           android:layout_marginRight="@dimen/cand_tab_margin_right"
           />
        <TextView
           android:id="@+id/candview_emoticon"
           android:layout_width="wrap_content"
           android:layout_height="fill_parent"
           android:layout_weight="1"
           android:background="@drawable/cand_tab"
           android:singleLine="true"
           android:gravity="center"
           android:text="@string/ti_cand_tab_emoticon_txt"
           android:textColor="@color/tab_textcolor_no_select"
           android:textSize="@dimen/tab_text_size"
           android:soundEffectsEnabled="false"
           android:layout_marginLeft="@dimen/cand_tab_margin_left"
           android:layout_marginRight="@dimen/cand_tab_margin_right"
           />

        <!-- OMRON SOFTWARE 2011.01.17 Add-START -->
        <TextView
           android:id="@+id/candview_decoemojilist"
           android:layout_width="wrap_content"
           android:layout_height="fill_parent"
           android:layout_weight="1"
           android:background="@drawable/cand_tab"
           android:singleLine="true"
           android:gravity="center"
           android:text="@string/ti_cand_tab_decoemojilist_txt"
           android:textColor="@color/tab_textcolor_no_select"
           android:textSize="@dimen/tab_text_size"
           android:soundEffectsEnabled="false"
           android:layout_marginLeft="@dimen/cand_tab_margin_left"
           android:layout_marginRight="@dimen/cand_tab_margin_right"
           />
        <!-- OMRON SOFTWARE 2011.01.17 Add-END -->
      </LinearLayout>
    </HorizontalScrollView>
  </LinearLayout>

  <LinearLayout
     android:id="@+id/candview_base_background"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >
  <ScrollView
     android:id="@+id/candview_scroll"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:fadingEdgeLength="0dip"
     android:scrollbars="vertical"
     >
    <LinearLayout
       android:id="@+id/candview_base"
       android:orientation="vertical"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       >
      <!--View
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:background="@drawable/candidate_top"
         /-->
      <LinearLayout
         android:id="@+id/candidates_1st_view"
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         />
      <AbsoluteLayout
         android:id="@+id/candidates_2nd_view"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         />
      <TextView
         android:id="@+id/candidates_are_nothing"
         android:text="@string/ti_candidates_are_nothing_txt"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         />
    </LinearLayout>
  </ScrollView>
  </LinearLayout>
  </LinearLayout>

  <LinearLayout
     android:id="@+id/read_more"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:fadingEdgeLength="0dip"
     android:orientation="vertical"
     android:gravity="right"
     >
    <ImageView
       android:id="@+id/read_more_button"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:soundEffectsEnabled="false"
       />
  </LinearLayout>
  </FrameLayout>
  </LinearLayout>
</FrameLayout>
